# courses

./: README.md
deepLearning School/: gradient.py  main.py  pytouchLib.py
deepLearning School/regrestion/: gradSpysk.py
deepLearning School/workWirhSklearn/: homework.py  seminar.py
Введение в DataScience и машинное обучение/: contest.ipynb  dataset_209691_15.txt  dataset_209770_6.txt  homework_2_4.ipynb  homework_2_7.ipynb  homework_3_5.ipynb  lesson_1_4.ipynb  lesson_1_5.ipynb  lesson_1_6.ipynb  lesson_1_7.ipynb  lesson_1_8.ipynb  lesson_2_0.ipynb  lesson_2_5.ipynb  lesson_3_2.ipynb  readme.md  testing_y_mush.csv
Вожатство/: readme.md  Гурова Н.А. Папка.docx
Нейронные сети/: lesson_1.ipynb  lesson_2.ipynb  lesson_3.ipynb
Разработка Android-приложений на Kotlin/: 05_01_02.kt  05_01_03.kt  05_01_05.kt  05_01_07.kt
Разработка Android-приложений на Kotlin/06_01_11/: MainActivity.kt  SecondActivity.kt
Разработка Android-приложений на Kotlin/06_01_12/: MainActivity.kt  SecondActivity.kt
Разработка Android-приложений на Kotlin/06_02_04/: ListItemActivity.kt  MainActivity.kt
Разработка Android-приложений на Kotlin/06_02_05/: MainActivity.kt
Разработка Android-приложений на Kotlin/06_02_06/: MainActivity.kt
Разработка Android-приложений на Kotlin/06_02_07/: MainActivity.kt
Разработка Android-приложений на Kotlin/06_03_05/: MainActivity.kt
Разработка Android-приложений на Kotlin/06_03_06/: MainActivity.kt
Разработка Android-приложений на Kotlin/06_03_07/: MainActivity.kt
Разработка Android-приложений на Kotlin/06_03_08/: MainActivity.kt
Разработка Android-приложений на Kotlin/07_01_06/: AndroidManifest.xml  MainActivity.kt  activity_main.xml  build.gradle
Разработка Android-приложений на Kotlin/07_01_09/: AndroidManifest.xml  MainActivity.kt
Разработка Android-приложений на Kotlin/07_01_11/: AndroidManifest.xml  MainActivity.kt  activity_main.xml
Разработка Android-приложений на Kotlin/07_02_05/: MainActivity.kt
Технопарк/my_love_project/: CMakeCache.txt  CMakeLists.txt  catform.cpp  catform.h  catform.ui  create_new_task.cpp  create_new_task.h  create_new_task.ui  edittask.cpp  edittask.h  edittask.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newplan.cpp  newplan.h  newplan.ui  planwindow.cpp  planwindow.h  planwindow.ui  regform.cpp  regform.h  regform.ui  resources.qrc  settingsform.cpp  settingsform.h  settingsform.ui  style.css
(+37 files in other folders)
